fix  z-index for error text

--- a/src/components/inputs/input.css
+++ b/src/components/inputs/input.css
@@ -76,6 +76,6 @@ input:focus {
 
   opacity: 1;
   bottom: 5px;
-  z-index: 10;
+  z-index: 1;
   transition: 0.3s;
 }
